--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
     --highcharts-color-7: #55bf3b;
     --highcharts-color-8: #df5353;
     --highcharts-color-9: #7798bf;
+    --highcharts-neutral-color-80 : gray;    
 };
   
 
@@ -27,7 +28,15 @@
 }
 
 .highcharts-axis-labels{ 
-    font-size:1em
+    font-size:1em;
+}
+
+.highcharts-axis-labels > text {
+    fill : gray !important;
+}
+
+.highcharts-xaxis{
+    stroke-width:  2;
 }
 
 .highcharts-xaxis-grid .highcharts-grid-line{ 
