--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
   
 
 .highcharts-container{ 
-    font-family:Dosis,arial,helvetica,sans-serif
+    font-family:Dosis,arial,helvetica,sans-serif ;
 }
 
 .highcharts-title,.highcharts-subtitle,.highcharts-yaxis .highcharts-axis-title{
@@ -49,15 +49,10 @@
 }
 
 
-.highcharts-xaxis-grid > .highcharts-grid-line:active{
-    stroke-width:1px;
-    opacity : 1;
-}
-
-
 .highcharts-tooltip-box{
     fill: 	rgb(12 ,12 ,15);
-    stroke-width: 1px;
+    stroke-width: 1.7px;
+    
 }
 
 .highcharts-background {
@@ -69,6 +64,7 @@
    fill : white !important; 
    color : white
 }
+
 
 .highcharts-legend-item > .highcharts-point {
     opacity : 0;
