html file title changed

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
     --highcharts-color-8: #df5353;
     --highcharts-color-9: #7798bf;
     --highcharts-neutral-color-80 : gray;    
-};
+}
 
 
   
